<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string-array name="CameraMenuActivity_melody_items_2">
		<item>"Melody 1"</item>
		<item>"Melody 2"</item>
		<item>"Melody 3"</item>
		<item>"Melody 4"</item>
		<item>"Melody 5"</item>
	</string-array>
	<string-array name="CameraMenuActivity_melody_items_3">
		<item>"Melody 1"</item>
		<item>"Melody 2"</item>
		<item>"Melody 3"</item>
		<item>"Melody 4"</item>
		<item>"Melody 5"</item>
		<item>"All Melodies"</item>
	</string-array>
	<string-array name="sec_type">
		<item>Mixed WPA/WPA2 PSK</item>
		<item>WPA2</item>
		<item>WEP</item>
	</string-array>
	<string-array name="shareTypesVideoDisabled">
		<item>For instructions on sharing motion events click here.</item>
		<item>Share snapshot</item>
	</string-array>
	<string-array name="night_vision_modes">
		<item>Auto</item>
		<item>On</item>
		<item>Off</item>
	</string-array>
	<string-array name="shareTypesVideoEnabled">
		<item>Share video</item>
		<item>Share snapshot</item>
	</string-array>
	<string name="wep_key_index_prompt">"Key Index"</string>
	<string name="wep_auth_method_prompt">"Authentication Method"</string>
	<string name="OK">"OK"</string>
	<string name="Cancel">"Cancel"</string>
	<string name="Proceed">"Proceed"</string>
	<string name="Yes">"Yes"</string>
	<string name="YesDontAsk">"Yes and do not ask again"</string>
	<string name="No">"No"</string>
	<string name="Version">"Version: "</string>
	<string name="Next">"Next"</string>
	<string name="Send">"Send"</string>
	<string name="ConnectToNetworkActivity_conn_failed">"Connection timeout or invalid network key."</string>
	<string name="ConnectToNetworkActivity_connecting">"Connecting…"</string>
	<string name="EntryActivity_connecting_to_bm">"Connecting to camera…"</string>
	<string name="EntryActivity_conn_failed_wifi">"Connection failed, check your Wi-Fi settings."</string>
	<string name="EntryActivity_cant_reach_cam_2">"Can not connect to camera, make sure that it is turned on."</string>
	<string name="EntryActivity_no_signal_1">"Camera disconnected due to network connectivity issues. Trying to reconnect…"</string>
	<string name="EntryActivity_no_signal_2">"Camera network is in range but application can not reconnect, reconnect manually."</string>
	<string name="EntryActivity_no_signal_5">"Can not start the video stream. Try again later."</string>
	<string name="EntryActivity_no_signal_6">"Can not start the video stream. Try again later."</string>
	<string name="EntryActivity_no_signal_8">"You have been viewing for 15 minutes. Would you like to continue?"</string>
	<string name="EntryActivity_not_login">"You need to login to perform this action."</string>
	<string name="EntryActivity_ptt_1">"Push-to-talk disabled due to connection issues."</string>
	<string name="EntryActivity_ptt_2">"Push-to-talk is currently unavailable."</string>
	<string name="EntryActivity_no_signal_10">"Network link lost."</string>
	<string name="LoginOrRegistrationActivity_conn_bms">"Connecting to server…"</string>
	<string name="LoginOrRegistrationActivity_passwd_1">"Password does not match."</string>
	<string name="LoginOrRegistrationActivity_user_1">"Username is too short (must be between 5–20 characters)"</string>
	<string name="LoginOrRegistrationActivity_conn_camera">"Connecting to camera…"</string>
	<string name="LoginOrRegistrationActivity_register_1">"Registering…"</string>
	<string name="LoginOrRegistrationActivity_user_reg_2">"Server is not reachable, check your internet connection."</string>
	<string name="LoginOrRegistrationActivity_user_reg_3">"Registration completed successfully."</string>
	<string name="LoginOrRegistrationActivity_login_1">"Logging in…"</string>
	<string name="LoginOrRegistrationActivity_login_2">"There has been an error with your login credentials, check your username and password."</string>
	<string name="LoginOrRegistrationActivity_login_3">"There has been an error with your login credentials: "</string>
	<string name="LoginOrRegistrationActivity_login_4">"Could not connect to server, check your network connection."</string>
	<string name="LoginOrRegistrationActivity_user_act_4">"Account not found. Please enter valid email address."</string>
	<string name="LoginOrRegistrationActivity_confirm_the_term">"Accept the Terms of Use to continue."</string>
	<string name="AccountSettingFragment_oldpasswd_1">"Old password does not match."</string>
	<string name="AccountSettingFragment_oldpasswd_2">"Old password is too short (must be between 8–30 characters)"</string>
	<string name="AccountSettingFragment_oldpasswd_3">"Old password is too long (must be between 8–30 characters)"</string>
	<string name="AccountSettingFragment_newpasswd_1">"New password does not match."</string>
	<string name="AccountSettingFragment_logout_confirmation">Are you sure you want to logout?</string>
	<string name="FFMpegPlaybackActivity_delete_event_confirmation">Do you want to delete event?</string>
	<string name="FFMpegPlaybackActivity_download_event_confirmation">Do you want to download video?</string>
	<string name="FFMpegPlaybackActivity_deleting_event">"Deleting event.."</string>
	<string name="FFMpegPlaybackActivity_delete_event_failed">"Delete event failed."</string>
	<string name="UserLoginActivity_updating">"Updating user profile…"</string>
	<string name="username">"Username"</string>
	<string name="password">"Password"</string>
	<string name="login">"Login"</string>
	<string name="confirm_pass_word">"Confirm Password"</string>
	<string name="create_account">Create account</string>
	<string name="forgot_password"><u>Forgot password?</u></string>
	<string name="wireless_network_settings">"Wireless Network Settings"</string>
	<string name="auth_method_">"Authorization method:"</string>
	<string name="password_">"Password: "</string>
	<string name="new_password">"New password"</string>
	<string name="old_password">"Old password"</string>
	<string name="change">"Change"</string>
	<string name="i_agree_to_the">"I agree to the "</string>
	<string name="term_of_use"><u>Terms of Use</u></string>
	<string name="ScanCam_3">"Scanning for configured camera(s)…"</string>
	<string name="unknown_error">"Unknown error, try again"</string>
	<string name="downloading_started">"Downloading started…"</string>
	<string name="usb_storage_is_turned_on_please_turn_off_usb_storage_before_launching_the_application">"USB storage is turned on, turn off USB storage before launching the application."</string>
	<string name="there_are_some_problems_contacting_the_server_please_try_again_later_">"We have encountered some issues contacting the server, try again later."</string>
	<string name="server_connection_timeout">"Server connection has timed out."</string>
	<string name="there_is_not_enough_space_to_store_the_snapshot_please_remove_some_files_and_try_again_">"There is not enough space to store the snapshot."</string>
	<string name="application_needs_free_storage_space_of_at_least_100mb_to_start_recording_">"At least 100MB free space required to start recording."</string>
	<string name="camera_firmware_upgrade_available">"Camera update is available.\nUpgrade now?"</string>
	<string name="mobile_data_3g_is_enabled_continue_to_connect_may_incur_air_time_charge_do_you_want_to_proceed_">"Mobile data is enabled. You may incur air time charges. Proceed?"</string>
	<string name="retry">"Retry"</string>
	<string name="email">"Email"</string>
	<string name="invalid_email_address_valid_email_address_is_in_the_format_someone_somedomain_sth_please_re_enter">"Invalid email address. Valid email address is in the format: someone@somedomain.com. Please re-enter."</string>
	<string name="connecting_through_relay_please_wait_">"Connecting through relay…"</string>
	<string name="camera_disconnected">"Camera disconnected."</string>
	<string name="username_is_already_registered">"User registration failed - Username is already registered."</string>
	<string name="make_sure_you_connect_to_a_trusted_network">"Make sure you connect to a trusted network."</string>
	<string name="connect">"Connect"</string>
	<string name="connect_camera_to_wi_fi">"Connect Camera to Wi-Fi"</string>
	<string name="select_your_wifi_network">"Select your Wi-Fi Network"</string>
	<string name="a_link_to_reset_your_password_has_been_sent_to_">"A link to reset your password has been sent to "</string>
	<string name="done">"Done"</string>
	<string name="video_quality_dropped_due_to_low_connectivity_">" "</string>
	<string name="refresh">"Refresh"</string>
	<string name="skip">"Skip"</string>
	<string name="server_is_temporarily_not_available">"Server is temporarily unavailable."</string>
	<string name="turn_on_wifi">"Turn on Wi-fi"</string>
	<string name="camera_is_upgrading_please_do_not_power_off_">"Camera is upgrading, do not turn it off or unplug it. This process may take up to 5 minutes…"</string>
	<string name="notifications">"Notifications"</string>
	<string name="profile">Profile</string>
	<string name="change_password">Change Password</string>
	<string name="plan">Plan</string>
	<string name="current_plan">Current Plan</string>
	<string name="do_not_disturb">Do Not Disturb</string>
	<string name="temperature">Temperature</string>
	<string name="log_out">Log out</string>
	<string name="remote_connection_settings">"Remote Connection Setting"</string>
	<string name="enable_video_timeout_alert">Remote Streaming Timeout</string>
	<string name="about_hubble">"About Hubble"</string>
	<string name="app_version">"App Version"</string>
	<string name="settings_terms_and_condition">View Terms and Conditions</string>
	<string name="notification_frequency">Notification frequency</string>
	<string name="notify_me_by_a_sound">Notify me by a sound</string>
	<string name="notify_me_by_vibration">Notify me by vibration</string>
	<string name="notify_me_when_on_a_call">Notify me when on a call</string>
	<string name="celsius">Celsius</string>
	<string name="none">None</string>
	<string name="endpoint">Endpoint</string>
	<string name="device_make">Device Make</string>
	<string name="device_model">Device Model</string>
	<string name="device_os">Device OS</string>
	<string name="device_provider">Device Provider</string>
	<string name="enable_camera_debug_menu">Enable camera debug menu</string>
	<string name="enable_lan_pairing_on_931">Enable LAN pairing on 931</string>
	<string name="force_local_video">Force Local Video</string>
	<string name="send_device_log">Send Device Log</string>
	<string name="debug_use_dev_ota">Use dev OTA</string>
	<string name="send_unpair_camera_log">Send Unpaired Camera Log</string>
	<string name="remote_p2p_streaming_setting_title">P2P Streaming</string>
	<string name="time_format">Time Format</string>
	<string name="time_non_am_pm">24hrs</string>
	<string name="enable_p2p_play_by_timestamp">Enable P2P play by timestamp</string>
	<string name="enable_p2p_corrupted_frame_filtering">Enable P2P corrupted frame filtering</string>
	<string name="go_to_debug_screen">Go to debug screen</string>
	<string name="debug_screen">Debug Screen</string>
	<string name="enable_terms_of_service">Enable Terms of Service</string>
	<string name="background_monitoring">Background monitoring</string>
	<string name="send_application_log">Send Application Log</string>
	<string name="apply_plan">Apply Plan</string>
	<string name="enable_rtmp_streaming">RTMPS streaming</string>
	<string name="p2p_background_keep_alive_mode">Background Keep Alive Mode</string>
	<string name="swipe_to_pan_and_tilt"><![CDATA[Swipe to pan & tilt]]></string>
	<string name="disable">Disable</string>
	<string name="work_with_nest">Works with Nest</string>
	<string name="manage_plan">Manage Plan</string>
	<string name="app_settings_title">Application Settings</string>
	<string name="smart_nursery">Smart Nursery</string>
	<string name="orbit_p2p_streaming_setting_title">Orbit - P2P Streaming</string>
</resources>