<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:key="pref_profile_category"
      android:layout="@layout/preference_category_custom_font_layout"
      android:title="@string/profile">
    <Preference
        android:icon="@drawable/username"
        android:key="string_userName"
        android:layout="@layout/preference_non_clickable_custom_font_layout"
        android:selectable="false"
        android:summary="Sean Stewart"
        android:title="@string/username"/>
    <Preference
        android:icon="@drawable/email"
        android:key="string_PortalUsrId"
        android:layout="@layout/preference_non_clickable_custom_font_layout"
        android:selectable="false"
        android:summary="tom@monitoreverywhere.com"
        android:title="@string/email"/>
    <Preference
        android:icon="@drawable/temperature"
        android:key="pref_temp"
        android:layout="@layout/preference_custom_font_divider_layout"
        android:summary="@string/celsius"
        android:title="@string/temperature"/>
    <Preference
        android:icon="@drawable/password"
        android:key="change_pwd"
        android:layout="@layout/preference_custom_font_divider_layout"
        android:summary="@string/change_password"
        android:title="@string/password">
    </Preference>
    <Preference
        android:icon="@drawable/debug"
        android:key="debug_mode"
        android:layout="@layout/preference_custom_font_divider_layout"
        android:summary="Go to debug screen"
        android:title="Debug Screen"/>
    <Preference
        android:icon="@drawable/logout"
        android:key="logOut"
        android:layout="@layout/preference_custom_font_divider_layout"
        android:title="@string/log_out">
    </Preference>
  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_plan_category"
      android:layout="@layout/preference_category_custom_font_layout"
      android:title="@string/plan">
    <Preference
        android:icon="@drawable/subscription"
        android:key="subscription"
        android:layout="@layout/preference_custom_font_layout"
        android:summary="@string/none"
        android:title="@string/current_plan">
    </Preference>
    <Preference
        android:icon="@drawable/ic_checkmark_black"
        android:key="applyPlan"
        android:layout="@layout/preference_custom_font_divider_layout"
        android:title="@string/apply_plan"></Preference>
  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_notification_category"
      android:layout="@layout/preference_category_custom_font_layout"
      android:title="@string/notifications">
    <CheckBoxPreference
        android:icon="@drawable/disconnect_alert"
        android:key="notifications_on_off"
        android:layout="@layout/preference_custom_toggle_view"
        android:title="@string/notifications"/>
  </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_remote_connection_category"
        android:layout="@layout/preference_category_custom_font_layout"
        android:title="@string/remote_connection_settings">

        <!--<Preference
            android:key="string_remote_settings"
            android:layout="@layout/preference_custom_font_layout"
            android:summary="@string/remote_p2p_streaming_setting_title">
        </Preference>-->

        <!--<Preference
            android:key="string_use_remote_only"
            android:layout="@layout/preference_custom_font_layout"
            android:summary="@string/use_remote_only"
            android:title="@string/use_remote_only">
        </Preference>-->

        <CheckBoxPreference
            android:icon="@drawable/timeout"
            android:key="string_timeout_alert_setting"
            android:layout="@layout/preference_custom_toggle_view"
            android:title="@string/enable_video_timeout_alert"></CheckBoxPreference>

        <CheckBoxPreference
            android:icon="@drawable/timeout"
            android:key="string_remote_p2p_streaming_setting"
            android:layout="@layout/preference_custom_toggle_view"
            android:title="@string/remote_p2p_streaming_setting_title"></CheckBoxPreference>

        <CheckBoxPreference
            android:icon="@drawable/timeout"
            android:key="string_remote_p2p_keep_alive_setting"
            android:layout="@layout/preference_custom_toggle_view"
            android:title="@string/p2p_background_keep_alive_mode"></CheckBoxPreference>
    </PreferenceCategory>

    <!--
    <PreferenceCategory
        android:key="pref_key_save_log"
        android:layout="@layout/preference_category_custom_font_layout"
        android:title="@string/save_log">
        <Preference
            android:key="save_log"
            android:layout="@layout/preference_custom_font_layout"
            android:title="@string/save_log">
        </Preference>
    </PreferenceCategory>
    -->
    <PreferenceCategory
        android:key="pref_about_category"
        android:layout="@layout/preference_category_custom_font_layout"
        android:title="@string/about_hubble">

        <Preference
            android:icon="@drawable/terms"
            android:key="term_and_condition"
            android:layout="@layout/preference_custom_font_divider_layout"
            android:title="@string/settings_terms_and_condition"/>

        <Preference
            android:icon="@drawable/ic_launcher"
            android:key="app_version"
            android:layout="@layout/preference_non_clickable_custom_font_layout"
            android:selectable="true"
            android:summary="@string/app_version"
            android:title="@string/app_version"></Preference>
    </PreferenceCategory>
</PreferenceScreen>