<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/menu_accountSettings"
	      android:title="Account Settings">


		<menu>

			<item
				android:id="@+id/change_password"
				android:title="Change Password"/>

            <item
                android:id="@+id/manage_plan"
                android:title="@string/manage_plan"
                />
			<item
				android:id="@+id/current_plan"
				android:title="@string/current_plan"
			/>

		</menu>
	</item>

	<item
		android:id="@+id/work_with_nest"
		android:title="@string/work_with_nest">

	</item>

	<item
		android:id="@+id/smart_nursery"
		android:title="@string/smart_nursery">

	</item>

	<item
				android:id="@+id/app_settings"
				android:title="@string/app_settings_title" />

	<!--<item android:id="@+id/menu_plan_Settings"
	      android:title="@string/plan">

		<menu>
			<item
				android:id="@+id/manage_plan"
				android:title="@string/manage_plan"
			/>
			&lt;!&ndash;<item
				android:id="@+id/apply_plan"
				android:title="@string/apply_plan"
			/>
			<item
				android:id="@+id/try_us_for_free"
				android:title="@string/try_us_for_free"
			/> &ndash;&gt;
		</menu>
	</item>-->


	<item
		android:id="@+id/menu_about"
		android:title="About">
		<menu>
			<item
				android:id="@+id/info"
				android:title="Info"/>
			<item
				android:id="@+id/support"
				android:title="Support"/>
			<item
				android:id="@+id/privacy_policy"
				android:title="Privacy Policy"/>
            <item
                android:id="@+id/licenses"
                android:title="Licenses"/>

		</menu>
	</item>
	<!--<item
		android:id="@+id/menu_settings"
		android:title="@string/menu_settings">

		<menu>
			<item
				android:id="@+id/doNotDistrub"
				android:title="@string/menu_do_not_distrub"/>
			&lt;!&ndash;<item
				android:id="@+id/backgroundMonitoring"
				android:title="@string/menu_background_monitoring"
				/>&ndash;&gt;
			<item
				android:id="@+id/sendlogs"
				android:title="@string/send_log"

				/>
		</menu>
	</item>-->

	<item
		android:id="@+id/p2p"
		android:title="@string/remote_p2p_streaming_setting_title"
		android:visible="false"
		/>

	<item
		android:id="@+id/orbit_p2p"
		android:title="@string/orbit_p2p_streaming_setting_title"
		android:visible="false"
		/>


	<item
		android:id="@+id/rtmps"
		android:title="@string/enable_rtmp_streaming"
		android:visible="false"
		/>
	<item
		android:id="@+id/logout"
		android:title="Logout"
	    />
</menu>
