<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <ScrollView
      android:id="@+id/srl_view_debug"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="0.89">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/fragmentDebug_username"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="5dp"
          android:text="@string/username"
          android:textColor="@color/black"/>

      <TextView
          android:id="@+id/fragmentDebug_email"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="5dp"

          android:text="@string/email"

          android:textColor="@color/black"/>

      <TextView
          android:id="@+id/fragmentDebug_endpoint"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="5dp"
          android:text="@string/endpoint"
          android:textColor="@color/black"/>

      <TextView
          android:id="@+id/fragmentDebug_appVersion"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:padding="5dp"
          android:text="@string/app_version"
          android:textColor="@color/black"/>

      <TextView
          android:id="@+id/fragmentDebug_deviceMake"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:padding="5dp"
          android:text="@string/device_make"
          android:textColor="@color/black"/>

      <TextView
          android:id="@+id/fragmentDebug_deviceModel"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:padding="5dp"
          android:text="@string/device_model"
          android:textColor="@color/black"/>

      <TextView
          android:id="@+id/fragmentDebug_deviceOS"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="5dp"
          android:text="@string/device_os"
          android:textColor="@color/black"/>

      <TextView
          android:id="@+id/fragmentDebug_deviceProvider"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="5dp"
          android:text="@string/device_provider"
          android:textColor="@color/black"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:layout_marginBottom="5dp"
          android:layout_marginTop="5dp"
          android:background="@color/extra_dark_grey"/>

      <CheckBox
          android:id="@+id/debug_toggle_options"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/enable_camera_debug_menu"
          android:textColor="@color/black"/>

      <CheckBox
          android:id="@+id/debug_enable_lan_connection"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/enable_lan_pairing_on_931"
          android:textColor="@color/black"/>

      <CheckBox
          android:id="@+id/debug_force_local"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/force_local_video"
          android:textColor="@color/black"
          android:visibility="gone"/>

      <CheckBox
          android:id="@+id/debug_use_dev_ota"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/debug_use_dev_ota"
          android:textColor="@color/black"/>

        <CheckBox
          android:id="@+id/debug_enable_tos"
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/enable_terms_of_service"
          android:textColor="@color/black"/>

      <CheckBox
        android:id="@+id/debug_p2p_timestamp_delay"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_p2p_play_by_timestamp"
        android:textColor="@color/black"/>

      <CheckBox
        android:id="@+id/debug_p2p_corrupted_frame_filtering"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_p2p_corrupted_frame_filtering"
        android:textColor="@color/black"/>

      <CheckBox
        android:id="@+id/debug_rtmp_streaming"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_rtmp_streaming"
        android:textColor="@color/black"/>

    </LinearLayout>

  </ScrollView>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Button
        android:id="@+id/debug_send_camera_log_setup_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/debug_send_log"
        android:layout_toEndOf="@+id/debug_send_log"
        android:layout_toRightOf="@+id/debug_send_log"
        android:text="@string/send_unpair_camera_log"/>

    <Button
        android:id="@+id/debug_send_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/send_device_log"/>
  </RelativeLayout>

</LinearLayout>